fixes for iframe not displaying content in IE8 A and B before content displaying on top of actual content in IE8 added listener for onmessage in IE8 and kept message for the other browsers

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<!--[if lt IE 7]>      <html class="pageA no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="pageA no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="pageA no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="pageA no-js"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -13,7 +13,7 @@
     <link rel="stylesheet" href="main.css">
     <!-- <script src="js/vendor/modernizr-2.6.2.min.js"></script> -->
   </head>
-  <body class="pageA">
+  <body>
     <h1>Cross-Origin postMessage</h1>
     <h2>unknown origin</h2>
     <form>
